# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vnc"
edition = "2021"
rust-version.workspace = true

[dependencies]
open_enum.workspace = true
pal_async.workspace = true

bitfield-struct.workspace = true
futures.workspace = true
socket2 = { workspace = true, features = [ "all" ] }
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
