# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "fw_cfg"
edition = "2021"
rust-version.workspace = true

[dependencies]
chipset_device.workspace = true
chipset_device_resources.workspace = true
fw_cfg_resources.workspace = true
vmcore.workspace = true
vm_resource.workspace = true

inspect.workspace = true

[lints]
workspace = true
