# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "fw_cfg"
edition = "2021"
rust-version.workspace = true

[dependencies]
chipset_device_resources.workspace = true
chipset_device.workspace = true
guestmem.workspace =true
memory_range = { workspace = true, features = ["inspect"] }
vm_resource.workspace = true
vm_topology = { workspace = true, features = ["inspect"] }
vmcore.workspace = true

inspect.workspace = true
open_enum.workspace = true
thiserror.workspace = true
tracelimit.workspace = true

bitfield-struct.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
